# Power-Management-HAT-B

./: CMakeLists.txt  LICENSE  Power_Management_HAT.c  README.md
examples/: Button_Ctr.c  CMakeLists.txt  Cycle.c  Period_Time.c  examples.h
lib/Config/: CMakeLists.txt  DEV_Config.c  DEV_Config.h  Debug.h
lib/GUI/: GUI_Paint.c
lib/INA219/: CMakeLists.txt  INA219.c  INA219.h
lib/MP28167/: CMakeLists.txt  MP28167.c  MP28167.h
lib/PCF85063A/: CMakeLists.txt  PCF85063A.c  PCF85063A.h
lib/Power_Management_Lib/: CMakeLists.txt  Power_Management_Lib.c  Power_Management_Lib.h
lib/QMI8658/: QMI8658.c  QMI8658.h
shell/: mk  ocd_flash
